fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-  color: #C12258;
+  color: rgb(116, 38, 64);
   text-decoration-line: underline;
   text-decoration-style: wavy;
 }
